--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,116 +1,177 @@
+
 .container {
-  padding: 0 2rem;
-}
-
-.main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-}
-
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
-
-@media (max-width: 600px) {
-  .grid {
+    background-color: var(--main-bg-color);
     width: 100%;
-    flex-direction: column;
-  }
+    overflow-x: hidden;
+}
+
+.container > div:first-child {
+    position: absolute;
+    inset: 0;
+}
+
+
+
+
+
+
+
+
+.container .dots {
+    position: relative;
+    top: 15px;
+    left: 15px;
+    display: flex;
+    gap: 5px;
+}
+
+.container .dots span {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    border-radius: 100%;
+    background-color: rgb(78, 55, 105);
+}
+
+
+
+
+
+.container .balls {
+    position: relative;
+}
+.container .balls span {
+    position: absolute;
+}
+.container .balls span:nth-child(1) {
+    top: 35%;
+    left: 7%;
+    background-color: rgb(74, 33, 112);
+    width: 20px;
+    height: 20px;
+    border-radius: 100%;
+}
+.container .balls span:nth-child(2) {
+    top: 64%;
+    left: 2%;
+    background-color: rgb(113, 163, 31);
+    width: 30px;
+    height: 30px;
+    border-radius: 100%;
+}
+
+.container .balls span:nth-child(3) {
+    top: 55%;
+    left: 40%;
+    background-color: rgb(30, 103, 114);
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+}
+.container .balls span:nth-child(4) {
+    top: 53%;
+    right: 1.5%;
+    background-color: rgb(235, 240, 229);
+    width: 60px;
+    height: 60px;
+    border-radius: 100%;
+}
+
+
+
+
+
+
+
+
+
+
+.container .main {
+    margin: 50px;
+    border-radius: 10px;
+    z-index: 1111;
+
+    /* For Glass */
+    background: rgba(255, 255, 255, 0.37);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(3px);
+    border: 1px solid rgba(255, 255, 255, 1);
+
+    overflow: hidden;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 992px) {
+
+    .container .main {
+        margin: 30px;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 768px) {
+
+    .container .main {
+        margin: 20px;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 550px) {
+
+    .container .main {
+        margin: 5px;
+    }
 }
