--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -250,12 +250,14 @@
 
     .logoicon div i {
         font-size: 30px;
+        margin: 10px 0 0 15px;
         padding: 12px 11px 0px 11px;
     }
 
 
     .menuicon div i {
         font-size: 25px;
+        margin: 0px 10px 20px 0;
     }
 
 
