--- a/styles/Profile.module.css
+++ b/styles/Profile.module.css
@@ -170,13 +170,8 @@
 
 @media screen and (max-width: 568px) {
 
-    .pc {
-        margin: 0px 10px !important;
-    }
 
-
-
-    .profile_name div:nth-child(1) {
+    /* .profile_name div:nth-child(1) {
         font-size: 15px;
     }
 
@@ -190,7 +185,7 @@
 
     .profile_name div:nth-child(4) {
         font-size: 20px;
-    }
+    } */
 
 
 
