--- a/styles/Services.module.css
+++ b/styles/Services.module.css
@@ -12,7 +12,7 @@
 
 .wrapper {
     width: 900px;
-    max-width: 96%;
+    max-width: 100%;
     margin: 0 auto;
 }
 
@@ -82,4 +82,61 @@
     display: block;
     object-fit: cover;
     border-radius: 5px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 992px) {
+
+    .title {
+        border-radius: 30px 4px;
+        font-size: 35px;
+        margin: 0px 0 50px 0;
+        padding: 25px 0;
+    }
+
+    .service {
+        gap: 100px 50px;
+    }
+
+    .single {
+        width: 200px;
+        height: 260px;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 550px) {
+
+    .title {
+        font-size: 30px;
+        padding: 20px 0;
+    }
+
+    .service {
+        gap: 70px 30px;
+    }
+
+    .single {
+        width: 180px;
+    }
 }
