--- a/styles/Works.module.css
+++ b/styles/Works.module.css
@@ -110,3 +110,53 @@
     font-weight: bold;
     padding: 15px 0 0 10px;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 992px) {
+
+    .title {
+        border-radius: 30px 4px;
+        font-size: 35px;
+        margin: 0px 0 50px 0;
+        padding: 25px 0;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 550px) {
+
+    .title {
+        font-size: 30px;
+        padding: 20px 0;
+    }
+}
