--- a/styles/Skills.module.css
+++ b/styles/Skills.module.css
@@ -118,7 +118,7 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-40%, -50%);
+    transform: translate(-50%, -50%);
 
 
     border-radius: 100%;
@@ -153,4 +153,61 @@
     font-size: 45px;
     font-weight: 800;
     box-shadow: 0px 0px 5px 5px rgb(206, 198, 198);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 1250px) {
+
+    .gradient {
+        top: 25%;
+        width: 350px;
+        height: 350px;
+    }
+}
+
+
+
+
+
+
+
+
+@media screen and (max-width: 992px) {
+
+    .gradient {
+        width: 300px;
+        height: 300px;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 550px) {
+
+    .gradient {
+        display: none;
+    }
 }
