--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -137,6 +137,27 @@
     .container .main {
         margin: 30px;
     }
+
+
+    .container .balls span:nth-child(1) {
+        top: 30%;
+        left: 7%;
+    }
+
+    .container .balls span:nth-child(2) {
+        top: 55%;
+        left: 1.5%;
+    }
+
+    .container .balls span:nth-child(3) {
+        top: 45%;
+        left: 40%;
+    }
+
+    .container .balls span:nth-child(4) {
+        top: 45%;
+        right: .7%;
+    }
 }
 
 
@@ -156,6 +177,34 @@
 
     .container .main {
         margin: 20px;
+    }
+
+
+
+    .container .balls span:nth-child(1) {
+        top: 22%;
+        left: 7%;
+    }
+
+    .container .balls span:nth-child(2) {
+        top: 75%;
+        left: 1%;
+    }
+
+    .container .balls span:nth-child(3) {
+        top: 30%;
+        left: 70%;
+
+        width: 30px;
+        height: 30px;
+    }
+
+    .container .balls span:nth-child(4) {
+        top: 55%;
+        right: .7%;
+
+        width: 40px;
+        height: 40px;
     }
 }
 
