--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -223,4 +223,25 @@
     .container .main {
         margin: 5px;
     }
+
+
+        .container .balls span:nth-child(1) {
+            top: 30%;
+            left: 33%;
+        }
+
+        .container .balls span:nth-child(2) {
+            top: 85%;
+            left: 1%;
+        }
+
+        .container .balls span:nth-child(3) {
+            top: 40%;
+            left: 70%;
+        }
+
+        .container .balls span:nth-child(4) {
+            top: 75%;
+            right: .7%;
+        }
 }
