--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -249,9 +249,9 @@
 
 
     .logoicon div i {
-        font-size: 30px;
-        margin: 10px 0 0 15px;
-        padding: 12px 11px 0px 11px;
+        font-size: 23px;
+        margin: 8px 0 0px 10px;
+        padding: 8px 8px 0px 8px;
     }
 
 
