--- a/styles/Works.module.css
+++ b/styles/Works.module.css
@@ -153,10 +153,45 @@
 
 
 
+@media screen and (max-width: 650px) {
+
+    .title {
+        text-align: left;
+        text-indent: 50px;
+    }
+
+    .title::after {
+        content: '\2720';
+        color: rgb(35, 30, 80);
+        margin-left: 50px;
+        font-size: 25px;
+        background-color: rgb(211, 181, 181);
+        border-radius: 100%;
+        padding-inline: 8px;
+    }
+}
+
+
+
+
+
+
+
+
 @media screen and (max-width: 550px) {
 
     .title {
         font-size: 30px;
         padding: 20px 0;
+    }
+
+    .title::after {
+        content: '\2720';
+        color: rgb(35, 30, 80);
+        margin-left: 50px;
+        font-size: 25px;
+        background-color: rgb(211, 181, 181);
+        border-radius: 100%;
+        padding-inline: 8px;
     }
 }
