--- a/styles/M_Skills.module.css
+++ b/styles/M_Skills.module.css
@@ -49,8 +49,42 @@
         margin-bottom: 100px;
     }
 
+
+
     .ss {
         display: flex;
+        align-items: center;
+        width: 100%;
+        margin-bottom: 40px;
     }
 
+
+    .ss div:first-of-type {
+        width: 35%;
+    }
+
+    .ss div:first-of-type img {
+        width: 70%;
+        margin: 0 auto;
+        display: block;
+        object-fit: cover;
+    }
+
+
+
+    .ss div:last-of-type {
+        width: 60%;
+        text-align: center;
+        font-size: 30px;
+        transform: rotate(-1deg);
+
+        display: flex;
+        justify-content: space-evenly;
+    }
+
+
+    .progress {
+        
+        background-color: rgb(89, 31, 143);
+    }
 }
