--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,6 +3,16 @@
     background-color: var(--main-bg-color);
     width: 100%;
     overflow-x: hidden;
+    opacity: 0;
+
+    animation: op 3s linear forwards;
+}
+
+
+@keyframes op {
+    100% {
+        opacity: 1;
+    }
 }
 
 .container > div:first-child {
