--- a/styles/M_Skills.module.css
+++ b/styles/M_Skills.module.css
@@ -10,11 +10,10 @@
 
     .M_Skills {
         display: block;
-        /* border: 1px solid #000; */
     }
 
     .M_Skills_container {
-        /* border: 1px solid #000; */
+        padding: 0;
     }
 
     .M_Skills_container
@@ -25,16 +24,17 @@
         text-indent: 50px;
 
         margin: 150px 0 100px 0;
-        box-shadow: 05px 05px 0px 8px rgb(34, 50, 107);
         font-size: 30px;
         padding: 20px 0;
+        box-shadow: 05px 05px 0px 8px rgb(34, 50, 107);
+        background-color: white;
     }
 
     .mtitle::after {
         /* content: '\2605'; */
         content: '\2720';
         color: rgb(35, 30, 80);
-        margin-left: 50px;
+        margin-left: 200px;
         font-size: 25px;
         background-color: rgb(211, 181, 181);
         border-radius: 100%;
@@ -52,19 +52,19 @@
 
 
     .ss {
+        width: 100%;
         display: flex;
         align-items: center;
-        width: 100%;
         margin-bottom: 40px;
     }
 
 
-    .ss div:first-of-type {
+    .ss > div:first-of-type {
         width: 35%;
     }
 
-    .ss div:first-of-type img {
-        width: 70%;
+    .ss > div:first-of-type img {
+        width: 50%;
         margin: 0 auto;
         display: block;
         object-fit: cover;
@@ -72,11 +72,10 @@
 
 
 
-    .ss div:last-of-type {
+    .ss > div:last-of-type {
         width: 60%;
         text-align: center;
         font-size: 30px;
-        transform: rotate(-1deg);
 
         display: flex;
         justify-content: space-evenly;
@@ -84,7 +83,6 @@
 
 
     .progress {
-        
-        background-color: rgb(89, 31, 143);
+        border: 1px solid #000;
     }
 }
