--- a/styles/Profile.module.css
+++ b/styles/Profile.module.css
@@ -58,6 +58,7 @@
 
 .profile_pic {
     flex: 1;
+
 }
 .pic {
     width: 300px;
@@ -69,8 +70,22 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(168, 176, 192);
+    background-color: rgb(20, 39, 77);
+
+    animation: shdow 2s linear .5s forwards;
 }
+@keyframes shdow {
+    0% {
+        box-shadow: 0px 0px 50px 1820px rgb(0, 0, 0);
+    }
+    70% {
+        box-shadow: 0px 0px 50px 1820px rgb(245, 238, 238);
+    }
+    100% {
+        box-shadow: 0px 0px 50px 5px rgb(66, 48, 48);
+    }
+}
+
 .pic img {
     border-radius: 100%;
     width: 93%;
