--- a/styles/Works.module.css
+++ b/styles/Works.module.css
@@ -33,16 +33,27 @@
 
 
 .title {
-    color: rgb(75, 60, 88);
-    border-radius: 30px 4px;
-    background-color: rgb(255, 255, 255);
-    font-weight: bold;
     text-align: center;
     font-size: 50px;
-
     padding: 30px 0;
-    margin: 50px 0 100px 0;
-    box-shadow: 0px 7px 0px 0px rgb(114, 113, 113);
+    margin: 150px 0 100px 0;
+
+    font-weight: bold;
+    text-indent: 50px;
+
+    border-radius: 10px 4px;
+    color: rgb(75, 60, 88);
+    background-color: rgb(255, 255, 255);
+    box-shadow: 05px 05px 0px 8px rgb(11, 31, 104);
+}
+.title::after {
+    content: '\2720';
+    color: rgb(35, 30, 80);
+    margin-left: 50px;
+    font-size: 25px;
+    background-color: rgb(211, 181, 181);
+    border-radius: 100%;
+    padding-inline: 8px;
 }
 
 
@@ -135,7 +146,6 @@
 @media screen and (max-width: 992px) {
 
     .title {
-        border-radius: 30px 4px;
         font-size: 35px;
         margin: 0px 0 50px 0;
         padding: 25px 0;
@@ -185,13 +195,4 @@
         padding: 20px 0;
     }
 
-    .title::after {
-        content: '\2720';
-        color: rgb(35, 30, 80);
-        margin-left: 50px;
-        font-size: 25px;
-        background-color: rgb(211, 181, 181);
-        border-radius: 100%;
-        padding-inline: 8px;
-    }
 }
