--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,13 +3,15 @@
     background-color: var(--main-bg-color);
     width: 100%;
     overflow-x: hidden;
-    opacity: 0;
 
     animation: op 4s linear forwards;
 }
 
 
 @keyframes op {
+    0% {
+        opacity: 0;
+    }
     100% {
         opacity: 1;
     }
