--- a/styles/Profile.module.css
+++ b/styles/Profile.module.css
@@ -72,7 +72,8 @@
     align-items: center;
     background-color: rgb(20, 39, 77);
 
-    animation: shdow 2s linear .5s forwards;
+    animation: shdow 2s linear 2s forwards;
+    box-shadow: 0px 0px 50px 1820px rgb(0, 0, 0);
 }
 @keyframes shdow {
     0% {
