--- a/styles/M_Skills.module.css
+++ b/styles/M_Skills.module.css
@@ -6,7 +6,7 @@
 
 
 
-@media screen and (max-width: 651px) {
+@media screen and (max-width: 710px) {
 
     .M_Skills {
         display: block;
@@ -64,7 +64,7 @@
     }
 
     .ss > div:first-of-type img {
-        width: 50%;
+        width: 80%;
         margin: 0 auto;
         display: block;
         object-fit: cover;
@@ -75,7 +75,8 @@
     .ss > div:last-of-type {
         width: 60%;
         text-align: center;
-        font-size: 30px;
+        font-size: 22px;
+        font-weight: bold;
 
         display: flex;
         justify-content: space-evenly;
@@ -83,6 +84,19 @@
 
 
     .progress {
-        border: 1px solid #000;
+        border-radius: 10px;
+        background: linear-gradient(to right, rgb(243, 210, 210) 0 30%, rgb(223, 173, 173) 30%, rgb(25, 101, 131) 90%, rgb(26, 0, 0) 90%);
     }
+    .bg {
+        background-color: rgb(255, 255, 255);
+        border-radius: 100%;
+        padding: 20px 15px;
+        box-shadow: -0px -0px 16px 2px  rgb(15, 15, 15);
+    }
+    .progress::after {
+        content: '\2605';
+        display: flex;
+        align-items: center;
+    }
+
 }
