--- a/styles/M_Skills.module.css
+++ b/styles/M_Skills.module.css
@@ -2,8 +2,28 @@
     display: none;
 }
 
+.mtitle {
+    text-align: center;
+    color: rgb(75, 60, 88);
+    border-radius: 10px 4px;
+    font-weight: bold;
+    text-indent: 50px;
+    margin: 150px 0 100px 0;
+    font-size: 50px;
+    padding: 20px 0;
+    box-shadow: 05px 05px 0px 8px rgb(34, 50, 107);
+    background-color: white;
+}
 
-
+.mtitle::after {
+    content: '\2720';
+    color: rgb(35, 30, 80);
+    margin-left: 50px;
+    font-size: 25px;
+    background-color: rgb(211, 181, 181);
+    border-radius: 100%;
+    padding-inline: 8px;
+}
 
 
 @media screen and (max-width: 710px) {
@@ -16,7 +36,6 @@
         padding: 0;
     }
 
-    .M_Skills_container
     .mtitle {
         color: rgb(75, 60, 88);
         border-radius: 10px 4px;
