--- a/styles/M_Skills.module.css
+++ b/styles/M_Skills.module.css
@@ -3,16 +3,17 @@
 }
 
 .mtitle {
-    text-align: center;
     color: rgb(75, 60, 88);
     border-radius: 10px 4px;
+    
     font-weight: bold;
     text-indent: 50px;
-    margin: 150px 0 100px 0;
     font-size: 50px;
-    padding: 20px 0;
-    box-shadow: 05px 05px 0px 8px rgb(34, 50, 107);
-    background-color: white;
+
+    margin: 150px 0 100px 0;
+    padding: 30px 0;
+    border-bottom: 21px solid rgb(34, 34, 34);
+    background-image: linear-gradient(to right, rgb(255, 255, 255) 30%, rgb(186, 187, 189) 30%);
 }
 
 .mtitle::after {
