--- a/styles/Skills.module.css
+++ b/styles/Skills.module.css
@@ -7,6 +7,7 @@
 
 .s_container {
     padding: 0;
+    height: 100%;
 }
 
 
@@ -14,6 +15,7 @@
 
 .s_wrapper {
     padding: 0;
+    height: 100%;
 }
 
 
@@ -24,7 +26,7 @@
 /* ------------------ */
 .lists {
     position: absolute;
-    top: 50%;
+    top: 70%;
     transform: translate(0%, -50%);
 
     z-index: 5;
@@ -58,13 +60,13 @@
     border-radius: 100%;
     background-color: antiquewhite;
 
-    box-shadow: 0px 0px 3px 2px rgb(6, 27, 61);
+    box-shadow: 1px 1px 0px 3px rgb(153, 153, 155);
 }
 .single div:nth-child(1) span { 
-    margin-left: 10px;
+    margin-right: 15px;
 }
 .single div:nth-child(2) span { 
-    margin-right: 10px;
+    margin-left: 15px;
 }
 
 .single:nth-child(1) div:nth-child(1) span { 
@@ -237,6 +239,10 @@
         height: 110vh;
     }
 
+    .single div {
+        font-size: 28px;
+    }
+
     .gradient {
         width: 300px;
         height: 300px;
@@ -276,6 +282,10 @@
 
     .lists .container .single {
         padding: 10px 40px;
+    }
+
+    .single div {
+        font-size: 25px;
     }
 
 
