--- a/styles/Skills.module.css
+++ b/styles/Skills.module.css
@@ -120,8 +120,8 @@
 .gradient {
     position: absolute;
     top: 30%;
-    left: 40%;
-    /* transform: translate(-50%, -50%); */
+    left: 35%;
+    transform: translate(-50%, -50%);
 
 
     border-radius: 100%;
