--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -35,6 +35,19 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
 .about {
     margin-top: 70px;
 }
@@ -55,7 +68,7 @@
 
 .title {
     text-align: center;
-    font-size: 60px;
+    font-size: 4rem;
     font-family: 'Alfa Slab One', cursive;
 
 
